Edited the portfolio section and fixed the resume button on the home page.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="cta-row" style="margin-top:.8rem;">
               <a class="btn btn--ghost" href="portfolio.html">View Portfolio</a>
               <a class="btn btn--ghost" href="qualifications.html">See Qualifications</a>
-              <a class="btn btn--ghost" href="assets/Aarya_Bookseller_Bobyard_Intern.pdf" target="_blank" rel="noopener">Download Résumé</a>
+              <a class="btn btn--ghost" href="assets/Bookseller_Aarya.pdf" download aria-label="Download résumé (PDF)">Download Résumé</a>
             </div>
 
             <!-- Music -->
